página de instruções criada e responsividade melhorada

--- a/game.html
+++ b/game.html
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Jogue Jokenpô online! Escolha entre Pedra, Papel ou Tesoura e desafie o computador em um jogo rápido e divertido." />
+    <title>Jogar | Jokenpô</title>
     <link rel="stylesheet" href="./css/global.css">
 </head>
 <body>
     <nav class="header container">
         <a href="/index.html" class="header-logo">✊🖐✌</a>
         <ul class="header-links">
-          <li><a href="./index.html">Home</a></li>
+          <li><a href="./index.html">Início</a></li>
           <li><a href="./game.html">Jogar</a></li>
-          <li><a href="">Instruções</a></li>
+          <li><a href="./rules.html">Instruções</a></li>
         </ul>
     </nav>
     <main class="content container">
         <h1>Escolha uma opção:</h1>
         <div class="container-btn">
-            <button class="btn">Pedra</button>
-            <button class="btn">Papel</button>
-            <button class="btn">Tesoura</button>
+            <button class="btn">Pedra ✊</button>
+            <button class="btn">Papel 🖐</button>
+            <button class="btn">Tesoura ✌️</button>
         </div>
     </main>
     <script src="./js/script.js"></script>
