--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Bem-vindo ao Jokenpô online! Jogue Pedra, Papel e Tesoura contra o computador, aprenda as regras e divirta-se com esse clássico jogo de estratégia." />
+    <title>Jokenpô</title>
     <link rel="stylesheet" href="./css/global.css">
 </head>
 
@@ -11,9 +12,9 @@
     <nav class="header container">
       <a href="/index.html" class="header-logo">✊🖐✌</a>
       <ul class="header-links">
-        <li><a href="./index.html">Home</a></li>
+        <li><a href="./index.html">Início</a></li>
         <li><a href="./game.html">Jogar</a></li>
-        <li><a href="">Instruções</a></li>
+        <li><a href="./rules.html">Instruções</a></li>
       </ul>
     </nav>
     <main class="content container">
